--- a/shihab.html
+++ b/shihab.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shihab Eldin</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;1,100;1,200;1,400;1,500&display=swap');
+    </style>
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,21 +17,27 @@
         <nav class="navbar">
            <a href="#" class="active">Home</a>
            <a href="#">About</a>
-           <a href="#">Services</a>
+           <a href="#">Skills</a>
            <a href="#">Profile</a>
            <a href="#">Contact</a>
+           
         </nav>
     </header>
 
     <section class="home">
         <div class="home-contect">
         <h1> HI, I'm Shehab eldin </h1>
+        <br>
+
         <h3>Frontend Developer</h3>
+        <br>
+        
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Numquam magnam sequi ratione, illo,
             animi quibusdam architecto reprehenderit quisquam
             tenetur quas iusto aspernatur dicta excepturi? Neque,
             necessitatibus soluta.</p>
+            <br>
          <div class="btn-box">
             <a href="#">Heri Me</a>
             <a href="#">Let's talk</a>
